--- a/qtc_packaging/debian_harmattan/rules
+++ b/qtc_packaging/debian_harmattan/rules
@@ -28,7 +28,7 @@ build-stamp: configure-stamp
 
 	# Add here commands to compile the package.
 	# $(MAKE) # Uncomment this line for use without Qt Creator
-	#docbook-to-man debian/texteditor.sgml > background.1
+	#docbook-to-man debian/exnote.sgml > background.1
 
 	touch $@
 
@@ -48,8 +48,8 @@ install: build
 	dh_clean -k 
 	dh_installdirs
 
-	# Add here commands to install the package into debian/texteditor.
-	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/texteditor install
+	# Add here commands to install the package into debian/exnote.
+	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/exnote install
 
 
 # Build architecture-independent files here.
