--- a/qtc_packaging/debian_harmattan/rules
+++ b/qtc_packaging/debian_harmattan/rules
@@ -28,7 +28,7 @@ build-stamp: configure-stamp
 
 	# Add here commands to compile the package.
 	# $(MAKE) # Uncomment this line for use without Qt Creator
-	#docbook-to-man debian/exnote.sgml > background.1
+	#docbook-to-man debian/wlanscanner.sgml > background.1
 
 	touch $@
 
@@ -49,7 +49,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/exnote.
-	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/exnote install
+	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/wlanscanner install
 
 
 # Build architecture-independent files here.
